# auto-builder

./: .env.example  .gitignore  .gitmodules  README.md  STARTUP.md  config.json  pom.xml  pyproject.toml  test_shell_service.py
builder/: config.py  main.py
builder/api/: build.py  conversations.py
builder/models/: conversation.py  task.py
builder/prompts/: orm.md
builder/prompts/output/: app.orm.xml
builder/services/: build_service.py  conversation_service.py  orm_service.py  parser.py  shell_service.py
builder/templates/: app.orm.xml
builder/tests/: test_parser.py
src/main/java/com/autobuilder/: ConfigServerApplication.java
src/main/java/com/autobuilder/common/: Result.java
src/main/java/com/autobuilder/config/: SwaggerConfig.java
src/main/java/com/autobuilder/controller/: ConfigUploadController.java
src/main/java/com/autobuilder/exception/: GlobalExceptionHandler.java
src/main/java/com/autobuilder/service/: ConfigService.java
src/main/java/com/autobuilder/service/impl/: ConfigServiceImpl.java  ZhipuLlmServiceImpl.java
src/main/resources/prompts/orm/: orm.md
xml_core/: README.md  __init__.py  core.py  formatter.py  merger.py  settings.py
